完成用户界面准备实现头像上传

--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -4,3 +4,11 @@
   flex-direction: $direction;
   flex-wrap: $wrap;
 }
+
+// 全局过度动画
+// .page-enter-active, .page-leave-active {
+//   transition: opacity .5s;
+// }
+// .page-enter, .page-leave-active {
+//   opacity: 0;
+// }
