封装分页列表组件，完成搜索接口，用户主页，手机电脑样式适配

--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -12,3 +12,10 @@
 // .page-enter, .page-leave-active {
 //   opacity: 0;
 // }
+.box{
+  background-color: #fff;
+  box-shadow: 0 0 8px #ddd;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
