--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -5,13 +5,13 @@
   flex-wrap: $wrap;
 }
 
-// 全局过度动画
-// .page-enter-active, .page-leave-active {
-//   transition: opacity .5s;
-// }
-// .page-enter, .page-leave-active {
-//   opacity: 0;
-// }
+全局过度动画
+.page-enter-active, .page-leave-active {
+  transition: opacity .5s;
+}
+.page-enter, .page-leave-active {
+  opacity: 0;
+}
 .box{
   background-color: #fff;
   box-shadow: 0 0 8px #ddd;
